# voxel-builder

./: CMakeLists.txt  README.md  TODO
src/: camera.cpp  camera.hpp  color_picker.cpp  color_picker.hpp  config.hpp  grid.cpp  grid.hpp  main.cpp  palette.cpp  palette.hpp  voxel.cpp  voxel.hpp  voxel_builder.cpp  voxel_builder.hpp  voxel_picker.cpp  voxel_picker.hpp
web/: build.sh  index.html  web_main.cpp
